changed 256 to 253 per course cat
changed 256 to 253 per course cat

--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:29:33Z</date>
+						<date>2019-04-16T17:53:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,8 +282,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ab/e6OjF2ggB
-								rK0xVmkj/A==
+								mVm4cVXLcrif
+								4ApMalZo4Q==
 								</data>
 								<key>Size</key>
 								<integer>98685</integer>
