--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-16T13:49:38Z</date>
+						<date>2019-04-24T20:41:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -64,21 +64,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -254,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oFeRtGdsPLUW
-								c1rtXSHXxg==
+								2dbi8L6bJ1dG
+								NWDco2zWJA==
 								</data>
 								<key>Size</key>
-								<integer>191303</integer>
+								<integer>191371</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IOSElHZWxLFP
-								JoNj1M2sbg==
+								9gk6eKVeNtSl
+								pODaxFXLzA==
 								</data>
 								<key>Size</key>
-								<integer>131815</integer>
+								<integer>133924</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
