--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -7,10 +7,10 @@
 		<string>page2</string>
 		<string>page3</string>
 		<string>page16</string>
-		<string>page53</string>
+		<string>page36</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -19,7 +19,7 @@
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page55</string>
+		<string>page49</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
