--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:29:33Z</date>
+						<date>2019-04-25T16:39:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -77,26 +77,6 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
-							</dict>
-							<key>files/stacks-image-0b34464-448x388.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								bC3rx70ZIVLf
-								bHOBolfZ/Q==
-								</data>
-								<key>Size</key>
-								<integer>90051</integer>
-							</dict>
-							<key>files/stacks-image-0b34464-448x388@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								R3MTvOzsuhFo
-								B1NKIocw6w==
-								</data>
-								<key>Size</key>
-								<integer>215408</integer>
 							</dict>
 							<key>files/stacks-image-0dd0fd3-300x256.png</key>
 							<dict>
@@ -168,6 +148,26 @@
 								<key>Size</key>
 								<integer>40839</integer>
 							</dict>
+							<key>files/stacks-image-86a3ab1-448x388.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4wW0ebOVNmZt
+								2rU7/gbdTQ==
+								</data>
+								<key>Size</key>
+								<integer>90963</integer>
+							</dict>
+							<key>files/stacks-image-86a3ab1-448x388@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sShZiC5S7NUC
+								v3EN3CF+/w==
+								</data>
+								<key>Size</key>
+								<integer>217418</integer>
+							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -212,8 +212,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								re+2MtjGaptr
-								Jv4Wc5B8Pg==
+								9oz8qCEXp9qS
+								Glr2cG9nPg==
 								</data>
 								<key>Size</key>
 								<integer>54346</integer>
