--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -9810,7 +9810,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:29:32Z</date>
+						<date>2019-04-25T17:35:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9945,6 +9945,16 @@
 								<key>Size</key>
 								<integer>18064</integer>
 							</dict>
+							<key>files/stacks-image-50350b4.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rif/KOhWt5Q/
+								un8+gKHJKg==
+								</data>
+								<key>Size</key>
+								<integer>33671</integer>
+							</dict>
 							<key>files/stacks-image-61fe2fb-148x138.png</key>
 							<dict>
 								<key>Digest</key>
@@ -10014,6 +10024,16 @@
 								</data>
 								<key>Size</key>
 								<integer>83593</integer>
+							</dict>
+							<key>files/stacks-image-7ef88b0-300x62.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sh+edZdbSav9
+								0Ex1ePhQJg==
+								</data>
+								<key>Size</key>
+								<integer>9754</integer>
 							</dict>
 							<key>files/stacks-image-805fb33.png</key>
 							<dict>
@@ -10125,6 +10145,26 @@
 								<key>Size</key>
 								<integer>19413</integer>
 							</dict>
+							<key>files/stacks-image-eaa7bd3-200x200.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SrehxleURey0
+								/AYibDl4KA==
+								</data>
+								<key>Size</key>
+								<integer>74903</integer>
+							</dict>
+							<key>files/stacks-image-eaa7bd3-200x200@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fzbCll8iOYNu
+								rbUz/a6mAw==
+								</data>
+								<key>Size</key>
+								<integer>265323</integer>
+							</dict>
 							<key>files/stacks-image-f332e12.png</key>
 							<dict>
 								<key>Digest</key>
@@ -10179,11 +10219,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								530mIKfjxVIY
-								p0vExaQKTw==
+								I38+Yjeoqlwb
+								OlgTtrP0AA==
 								</data>
 								<key>Size</key>
-								<integer>151186</integer>
+								<integer>157110</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -10199,11 +10239,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r6aHaAw2qXSD
-								vrJ4O74Rgw==
+								oqEbJXOfe41C
+								fjpzLUkvTg==
 								</data>
 								<key>Size</key>
-								<integer>81369</integer>
+								<integer>85779</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14656,7 +14696,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-25T16:39:36Z</date>
+						<date>2019-04-25T17:35:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15695,8 +15735,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uycjU5s6bsBU
-								NPh49j4IwA==
+								kMJXA92zYipd
+								ytCNm1NFYw==
 								</data>
 								<key>Size</key>
 								<integer>3748</integer>
@@ -15843,7 +15883,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcE5DSVunrqADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcE5E6NoCS2ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15853,14 +15893,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTkNJW6f
-				OIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTkTo2gK
+				noAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBOQ0lbp9i
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBOROjaArZ
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15870,7 +15910,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBOQ0lbp+EgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBOROjaAsDgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15880,7 +15920,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBOQ0lbp+VgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBOROjaAskgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
