exhibitor booth/satellites speaker logistics NetSci
exhibitor booth/satellites speaker logistics NetSci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-24T20:41:14Z</date>
+						<date>2019-04-29T18:01:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -254,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2dbi8L6bJ1dG
-								NWDco2zWJA==
+								OadahfBF9CAC
+								mlKNwlwhgA==
 								</data>
 								<key>Size</key>
-								<integer>191371</integer>
+								<integer>191421</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9gk6eKVeNtSl
-								pODaxFXLzA==
+								cHuyN6sg1iBe
+								4Pq2j4xXZQ==
 								</data>
 								<key>Size</key>
-								<integer>133924</integer>
+								<integer>135276</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
