Schedule Updates - NetSci
Schedule Updates - NetSci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-24T20:43:41Z</date>
+						<date>2019-04-30T18:41:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -534,31 +534,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Po+Jp2ODAw9O
-								M7bXVYTaKg==
+								gV9QEissliy1
+								GnqjSKf4oA==
 								</data>
 								<key>Size</key>
-								<integer>555584</integer>
+								<integer>555309</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								vn03dzs8+7bP
-								b/T0802nkA==
+								LXxloFZLw+Hg
+								SIS1E1vGOg==
 								</data>
 								<key>Size</key>
-								<integer>76803</integer>
+								<integer>76621</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								IySjo2gCAwkv
-								C42eI347yg==
+								fhXDi8g0bbfM
+								pUtNH6EZ0w==
 								</data>
 								<key>Size</key>
-								<integer>939749</integer>
+								<integer>937550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
