--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-30T18:41:36Z</date>
+						<date>2019-05-01T14:17:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,21 +84,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -334,11 +334,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fhXDi8g0bbfM
-								pUtNH6EZ0w==
+								GaJVtiC9DjOe
+								oh4FsjrLqA==
 								</data>
 								<key>Size</key>
-								<integer>937550</integer>
+								<integer>937560</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
