--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T17:44:15Z</date>
+						<date>2019-05-02T17:48:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JAmbmvGtv+RT
-								9aXX1wXOlw==
+								2YA4WzOL6JK2
+								pJwezl1xHw==
 								</data>
 								<key>Size</key>
-								<integer>937408</integer>
+								<integer>937388</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
